--- a/src/scss/libs/swiper.scss
+++ b/src/scss/libs/swiper.scss
@@ -19,40 +19,20 @@
   }
 }
 
-.swiper {
+.primary-swiper {
   max-width: 1396px;
   width: 100%;
   height: 100%;
   margin: 0 auto;
   overflow: hidden;
-}
 
-.swiper-wrapper {
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  display: flex;
-  transition-property: transform;
-  box-sizing: content-box;
-}
-
-.swiper-slide {
-  position: relative;
-  display: flex;
-  font-size: 18px;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  &__slide {
-    border: $primaryBorder;
-    border-radius: $primaryRadius;
-  }
-
-  & img {
+  &__swiper-wrapper {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    z-index: 1;
+    display: flex;
+    transition-property: transform;
+    box-sizing: content-box;
   }
 }
 
@@ -119,6 +99,21 @@
 }
 
 .slide {
+  position: relative;
+  display: flex;
+  font-size: 18px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: $primaryBorder;
+  border-radius: $primaryRadius;
+
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
   &__content-block {
     display: flex;
     flex-direction: column;
