--- a/src/scss/layout/buttons.scss
+++ b/src/scss/layout/buttons.scss
@@ -95,3 +95,47 @@
       mask-image: url(../images/icons/sticker_heart.svg);
    }
 }
+
+.button-prev,
+.button-next {
+   width: 40px;
+   height: 40px;
+   text-align: center;
+   cursor: pointer;
+   color: $blackColor;
+   border: $primaryBorder;
+   border-radius: $primaryRadius;
+   background: $whiteColor;
+
+   &::after,
+   &::after {
+      content: '';
+      position: absolute;
+      top: 15px;
+      width: 15px;
+      height: 15px;
+      border-top: 2px solid $blackColor;
+      border-right: 2px solid $blackColor;
+   }
+}
+
+// &__button-next::after,
+// &__button-prev::after {
+//   content: '';
+//   position: absolute;
+//   top: 15px;
+//   width: 15px;
+//   height: 15px;
+//   border-top: 2px solid $blackColor;
+//   border-right: 2px solid $blackColor;
+// }
+
+.button-prev::after {
+   left: 15px;
+   transform: rotate(225deg);
+}
+
+.button-next::after {
+   right: 15px;
+   transform: rotate(45deg);
+}
